--- a/backend/env/.env.development
+++ b/backend/env/.env.development
@@ -4,3 +4,4 @@ PORT=5432
 USER=user
 PASSWORD=123123
 DATABASE=goalsetting
+JWT_SECRET={RWwRCZ%Np}UcEm/]8CXJ&YREt!-x>]/9(xNfF75$)H>jUEZ=V?\,=a%rm(@D8B=
