--- a/backend/env/.env.test
+++ b/backend/env/.env.test
@@ -4,3 +4,4 @@ PORT=5432
 USER=user
 PASSWORD=123123
 DATABASE=goalsetting-test
+JWT_SECRET=mD.GsXndP6*/Gk,vX3Z~7/2n9wgV8Qy]$^>5tmTc)JHL8Q-$NVk+t>7!%x>{9-/*
