--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
