Add Readme.md, Updated some code

--- a/backend/env/.env.development
+++ b/backend/env/.env.development
@@ -1,7 +1,7 @@
 NODE_ENV=development
 HOST=localhost
-PORT=5432
-USER=user
-PASSWORD=123123
+DB_PORT=5432
+USER=user1
+PASSWORD=123456
 DATABASE=goalsetting
 JWT_SECRET={RWwRCZ%Np}UcEm/]8CXJ&YREt!-x>]/9(xNfF75$)H>jUEZ=V?\,=a%rm(@D8B=
