--- a/backend/env/.env.test
+++ b/backend/env/.env.test
@@ -1,7 +1,7 @@
 NODE_ENV=test
 HOST=localhost
-PORT=5432
-USER=user
-PASSWORD=123123
+DB_PORT=5432
+USER=user1
+PASSWORD=123456
 DATABASE=goalsetting-test
 JWT_SECRET=mD.GsXndP6*/Gk,vX3Z~7/2n9wgV8Qy]$^>5tmTc)JHL8Q-$NVk+t>7!%x>{9-/*
